--- a/.github/workflows/Pipi.yml
+++ b/.github/workflows/Pipi.yml
@@ -26,5 +26,4 @@ jobs:
         # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
         with:
-          user:  ${{ secrets.token }}
-          password: ${{ secrets.pypi_password }}
+          password: ${{ secrets.token }}
