--- a/.github/workflows/Pipi.yml
+++ b/.github/workflows/Pipi.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Publish a Python distribution to PyPI
         # Might want to add but does not work on workflow_dispatch :
         # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.token }}
