--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,29 +1,32 @@
 # Lets upload utilix to PyPi to make it pip instalable 
 # Mostly based on https://github.com/marketplace/actions/pypi-publish
+name: PyPI
+
 on:
-  release:
-    types: [published]
   workflow_dispatch:
+  release:
+    types: [ created ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       # Setup steps
       - name: Setup python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.8'
+          python-version: '3.9'
+
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
       - name: Install dependencies
         run: pip install wheel
+
       - name: Build package
         run: python setup.py sdist bdist_wheel
-      # Do the publish
+
       - name: Publish a Python distribution to PyPI
-        # Might want to add but does not work on workflow_dispatch :
-        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          password: ${{ secrets.token }}
