--- a/.github/workflows/Pipi.yml
+++ b/.github/workflows/Pipi.yml
@@ -1,32 +1,29 @@
 # Lets upload utilix to PyPi to make it pip instalable 
 # Mostly based on https://github.com/marketplace/actions/pypi-publish
-name: PyPI
-
 on:
-  workflow_dispatch:
   release:
-    types: [ created ]
+    types: [published]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
     steps:
       # Setup steps
       - name: Setup python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
-
+          python-version: '3.8'
       - name: Checkout repo
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v2
       - name: Install dependencies
         run: pip install wheel
-
       - name: Build package
         run: python setup.py sdist bdist_wheel
-
+      # Do the publish
       - name: Publish a Python distribution to PyPI
+        # Might want to add but does not work on workflow_dispatch :
+        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.token }}
