--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,9 @@
 [bumpversion]
 current_version = 0.8.5
-files = setup.py utilix/__init__.py
+files = utilix/__init__.py
 commit = True
 tag = True
+
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
