--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -17,9 +17,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: pip install wheel
+        run: pip install build
       - name: Build package
-        run: python setup.py sdist bdist_wheel
+        run: python -m build
       # Do the publish
       - name: Publish a Python distribution to PyPI
         # Might want to add but does not work on workflow_dispatch :
