--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -26,7 +26,9 @@ jobs:
       - name: Install python dependencies
         uses: py-actions/py-dependency-install@v2
       - name: Install utilix
-        run: python setup.py install
+        run: |
+          pip install pytest hypothesis coverage coveralls
+          pip install . --force-reinstall
       - name: Install pytest and hypothesis
         run: pip install pytest hypothesis flake8 pytest-cov
       - name: Test package
