--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ packages = [
     { include = "utilix" }
 ]
 
+[tool.poetry.scripts]
+xefind = "utilix.scripts.xefind:main"
+
 [tool.poetry.dependencies]
 python = ">=3.8,<3.13"
 pymongo = "*"
